option('build', type : 'combo', choices : ['all', 'standalone', 'library'], value : 'all', description : 'build type')
option('consolekit', type : 'boolean', value : true, description : 'enable ConsoleKit support')
option('static_analysis', type : 'boolean', value : false, description : 'enable GCC static analysis support')
option('firmware-packager', type : 'boolean', value : true, description : 'enable firmware-packager installation')
option('docs', type : 'combo', choices : ['none', 'gtkdoc', 'docgen'], value : 'docgen', description : 'developer documentation type')
option('introspection', type : 'boolean', value : true, description : 'generate GObject Introspection data')
option('lvfs', type : 'combo', choices : ['true', 'false', 'disabled'], value : 'true', description : 'install LVFS remotes')
option('man', type : 'boolean', value : true, description : 'enable man pages')
option('libarchive', type : 'feature', description : 'libarchive support')
option('gudev', type : 'boolean', value : true, description : 'enable GUdev support')
option('gusb', type : 'feature', description : 'GUsb support')
option('bluez', type : 'boolean', value : false, description : 'enable BlueZ support')
option('polkit', type: 'feature', description : 'PolKit support in daemon')
option('gnutls', type: 'feature', description : 'GnuTLS support')
option('sqlite', type: 'feature', description : 'sqlite support')
option('lzma', type: 'feature', description : 'enable LZMA support')
option('plugin_amt', type : 'boolean', value : true, description : 'enable Intel AMT support')
option('plugin_acpi_phat', type : 'boolean', value : true, description : 'enable ACPI PHAT support')
option('plugin_bcm57xx', type : 'boolean', value : true, description : 'enable BCM57xx support')
option('plugin_cfu', type : 'boolean', value : false, description : 'enable CFU support')
option('plugin_cpu', type : 'boolean', value : true, description : 'enable CPU support')
option('plugin_dell', type : 'feature', description : 'enable Dell-specific support')
option('plugin_dummy', type : 'boolean', value : false, description : 'enable the dummy device')
option('plugin_emmc', type : 'boolean', value : true, description : 'enable eMMC support')
option('plugin_ep963x', type : 'boolean', value : true, description : 'enable EP963x support')
option('plugin_fastboot', type : 'boolean', value : true, description : 'enable Fastboot support')
option('plugin_gpio', type : 'feature', description : 'Linux GPIO support')
option('plugin_logitech_bulkcontroller', type : 'feature', description : 'Logitech bulk controller support')
option('plugin_parade_lspcon', type : 'boolean', value : true, description : 'enable Parade LSPCON support')
option('plugin_pixart_rf', type : 'boolean', value : true, description : 'enable PixartRF support')
option('plugin_realtek_mst', type : 'boolean', value : true, description : 'enable Realtek MST hub support')
option('plugin_synaptics_mst', type: 'boolean', value: true, description : 'enable Synaptics MST hub support')
option('plugin_synaptics_rmi', type: 'boolean', value: true, description : 'enable Synaptics RMI support')
option('plugin_scsi', type: 'boolean', value: true, description : 'enable SCSI support')
option('plugin_tpm', type : 'feature', description : 'TPM support')
option('plugin_thunderbolt', type : 'boolean', value : true, description : 'enable Thunderbolt support')
option('plugin_redfish', type : 'feature' , description : 'Redfish support')
option('plugin_uefi_capsule', type : 'feature', description : 'UEFI capsule support')
option('plugin_uefi_capsule_splash', type : 'boolean', value : true, description : 'enable UEFI capsule splash support')
option('plugin_uefi_pk', type : 'boolean', value : true, description : 'enable UEFI PK support')
option('plugin_nitrokey', type : 'boolean', value : true, description : 'enable Nitrokey support')
option('plugin_nvme', type : 'feature', description : 'enable NVMe support')
option('plugin_modem_manager', type : 'feature', description : 'ModemManager support')
option('plugin_msr', type : 'boolean', value : true, description : 'enable MSR support')
option('plugin_mtd', type : 'boolean', value : true, description : 'enable MTD support')
option('plugin_flashrom', type : 'feature', description : 'enable flashrom support')
option('plugin_platform_integrity', type : 'boolean', value : false, description : 'enable platform integrity support')
option('plugin_intel_spi', type : 'boolean', value: false, description : 'enable Intel SPI support')
option('plugin_uf2', type : 'boolean', value : true, description : 'enable support for UF2')
option('plugin_upower', type : 'boolean', value : true, description : 'enable support for UPower')
option('plugin_powerd', type : 'boolean', value : true, description : 'enable support for powerd')
option('qubes', type : 'boolean', value : false, description : 'build packages for Qubes OS')
option('supported_build', type : 'boolean', value : false, description: 'distribution package with upstream support')
option('systemd', type : 'feature', description : 'systemd support')
option('systemd_root_prefix', type: 'string', value: '', description: 'Directory to base systemd’s installation directories on')
option('elogind', type : 'boolean', value : false, description : 'enable elogind support')
option('tests', type : 'boolean', value : true, description : 'enable tests')
option('soup_session_compat', type : 'boolean', value : true, description : 'enable SoupSession runtime compatibility support')
option('curl', type : 'feature', description : 'libcurl support')
option('udevdir', type: 'string', value: '', description: 'Directory for udev rules')
option('efi_os_dir', type: 'string', description : 'the hardcoded name of OS directory in ESP, e.g. fedora')
option('efi_binary', type: 'boolean', value : true, description : 'generate uefi binary if missing')
option('metainfo', type: 'boolean', value : true, description : 'install the project metainfo.xml information')
option('bash_completion', type: 'boolean', value : true, description : 'enable bash completion')
option('fish_completion', type: 'boolean', value : true, description : 'enable fish completion')
option('offline', type: 'boolean', value : true, description : 'enable installing firmware using a pre-boot systemd target')
option('compat_cli', type: 'boolean', value : true, description : 'enable legacy commands: fwupdagent,dfu-tool,fwupdate')
option('hsi', type: 'boolean', value : true, description : 'enable plugins used just for HSI')
